--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,24 @@ services:
     working_dir: /var/www/public
     command: php -S 0.0.0.0:8080
     ports:
-      - 8080:8080
+      - 8080:808
+  db:
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_DATABASE: 'db'
+      # So you don't have to use root, but you can if you like
+      MYSQL_USER: 'user'
+      # You can use whatever password you like
+      MYSQL_PASSWORD: 'password'
+      # Password for root access
+      MYSQL_ROOT_PASSWORD: 'password'
+    ports:
+      # <Port exposed> : <MySQL Port running inside container>
+      - '3306:3306'
+    expose:
+      # Opens port 3306 on the container
+      - '3306'
+      # Where our data will be persisted
+    volumes:
+      - ./database:/var/lib/mysql
