--- a/src/composer.json
+++ b/src/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "^4.5",
         "slim/psr7": "^1.1",
-        "illuminate/database": "^10.8"
+        "illuminate/database": "^10.8",
+        "robmorgan/phinx": "^0.13.4"
     },
     "autoload": {
         "psr-4": {
