--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,5 @@ services:
       # Opens port 3306 on the container
       - '3306'
       # Where our data will be persisted
-    volumes:
-      - ./database:/var/lib/mysql
+ #   volumes:
+  #    - ./database:/var/lib/mysql
