--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 version: '3.7'
 
 services:
-  zones:
+  app:
     image: php:alpine
     volumes:
       - ./src/:/var/www/
     working_dir: /var/www/public
     command: php -S 0.0.0.0:8080
     ports:
-      - 8080:808
+      - 8080:80
   db:
     image: mysql:5.7
     restart: always
+    container_name: db
     environment:
       MYSQL_DATABASE: 'db'
       # So you don't have to use root, but you can if you like
@@ -29,3 +30,15 @@ services:
       # Where our data will be persisted
  #   volumes:
   #    - ./database:/var/lib/mysql
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    links:
+      - db
+    environment:
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    restart: always
+    ports:
+      - 8081:80
